--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </select>
     </div>
 
-    <ul class="chowcase">
+    <ul class="showcase">
       <li>
         <div class="seat"></div>
         <small>N/A</small>
@@ -35,7 +35,7 @@
 
     <div class="container">
       <div class="screen"></div>
-      <div class="rows">
+      <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat occupied"></div>
@@ -46,7 +46,7 @@
         <div class="seat"></div>
         <div class="seat"></div>
       </div>
-      <div class="rows">
+      <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
@@ -57,7 +57,7 @@
         <div class="seat"></div>
         <div class="seat"></div>
       </div>
-      <div class="rows">
+      <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
@@ -68,7 +68,7 @@
         <div class="seat occupied"></div>
         <div class="seat"></div>
       </div>
-      <div class="rows">
+      <div class="row">
         <div class="seat occupied"></div>
         <div class="seat"></div>
         <div class="seat"></div>
@@ -79,7 +79,7 @@
         <div class="seat"></div>
         <div class="seat"></div>
       </div>
-      <div class="rows">
+      <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat occupied"></div>
@@ -90,7 +90,7 @@
         <div class="seat"></div>
         <div class="seat"></div>
       </div>
-      <div class="rows">
+      <div class="row">
         <div class="seat"></div>
         <div class="seat"></div>
         <div class="seat"></div>
